test_programs/compile_failure/noirc_frontend_tests_references_does_not_crash_when_passing_mutable_undefined_variable/src/main.nr

    fn main() {
        mutate(&mut undefined);
    }

    fn mutate(foo: &mut Field) {
        *foo = 1;
    }
    